fix: :bug: clipped notification bubble

--- a/wwwroot/css/Navbar.css
+++ b/wwwroot/css/Navbar.css
@@ -28,6 +28,7 @@ li>svg {
     gap: 1rem;
     height: 100%;
     align-items: center;
+    z-index: 999;
 }
 
 .nav-group a:not(.nav-item):not(.signin-btn) {
@@ -243,13 +244,12 @@ body nav ul .nav-group .logo p {
     justify-content: center;
     background-color: #ff0000;
     color: white;
-    border-radius: 50%;
+    border-radius: 9999px;
     font-size: 0.7rem;
-    min-width: 15px;
-    height: 15px;
-    padding: 2px;
-    top: 0;
-    right: -8px;
+    min-width: 1rem;
+    width: fit-content;
+    height: 1rem;
+    padding: 2px 4px;
     font-weight: bold;
 }
 
@@ -289,7 +289,7 @@ body nav ul .nav-group .logo p {
         padding: 1rem 0;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
-        
+
         /* Improved hiding technique */
         transform: translateY(-100%);
         opacity: 0;
